   - Side piece of defect 213... channel command is not rejecting large unsigned
     channel values e.g. 0x87654321.
   - Really get mask gates to work correctly.
   - Fix error in newGUI.tcl - if used with Scaler processing,
     run number could be non decimal (e.g. UNKNOWN).
   - Fix error in wysiwyg prints of zoomed panes.
   - Fix Y height error in plotting linear 1-d channels.. an off by 1 error only
     visible for a relatively small number of counts.
   - Enh 194 - print more precision in integration results.
   - Enh 205 - max the gui status line for tha attach so that it can't
     make the gui window very very wide.
   - Deal with the fact that treeview find is >very< slow on 64 bit systems
     in browser.tcl 

  Released September 21, 2006

3.1-003
   - Added -rpath to --with-motif-libdir configuration so that we can be sure we get the
     right motif.
   - Added prntout of VERSION to tkcon at startup
   - Back ported fix for defect BZ 224 (integrations of 2dlong spectra
     give incorrect centroids on 64 bit systems) from 3.2
   - Added CHANGELOG to the installation.
   - Figure out defect 228 - printer defaults can be written with illegal values
     in Xamine.Defaults file.
   - Defect 229 - setup.tcl is obsolete now.
   - CXdrInputStream.cpp - as per D. Caussyn's catch: delete [] m_pBuffer not
     delete m_pBuffer.
 Released     Jan 15, 2007

3.1-004
   - Defect 288 the eval apply $gate [list $spectra] did not work as believed.
     iterate over the list instead.
3.1-004
   - Enh 232 : If treeparameter -set is invoked fire traces on that parameter so
	any GUI elements associated with it are updated.
   - BZ292 - Synchronize gpVersion with config.h's VERSION symbol.

   - BZ 293 - Uniquify tk appname   and remove NSCL copyright notice from the top of
       tkcon.tcl as it's really Jeff Hobb's work under "bourbonware".
   - BZ 284 - Ensure SpecTcldoes not crash if the VERSION file is not readable.

Released April 26, 2007

3.1-005